--- a/views/todos/list.hbs
+++ b/views/todos/list.hbs
@@ -11,7 +11,7 @@
 {{/each}}
 
 <div class="page-header">
-    <h1>TODO-s</h1>
+    <h1>TODOs</h1>
 </div>
 
 <table class="table table-striped table-hover" id="todoTable">
@@ -34,7 +34,7 @@
             <td>{{dueDate}}</td>
             <td>{{assignerNickname}}</td>
             <td>
-                <a class="btn btn-default btn-sm" href="/todos/edit/{{id}}" role="button">Szerkeszt</a>
+                <a class="btn btn-default btn-sm" href="todos/edit/{{id}}" role="button">Szerkeszt</a>
                 <a class="btn btn-danger btn-sm" href="todos/delete/{{id}}" role="button">Törlés</a>
             </td>
         </tr>
