--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -42,7 +42,7 @@
                           {{/if}}
                       </ul>
                       {{#if loggedIn}}
-                      <p class="navbar-text navbar-right">Üdv, {{user.forename}}!</p>
+                      <p class="navbar-text navbar-right">Üdv, {{user.displayName}}!</p>
                       {{/if}}
                       
                     </div><!-- /.navbar-collapse -->
