--- a/views/login/index.hbs
+++ b/views/login/index.hbs
@@ -25,8 +25,7 @@
         </div>
         <div class="form-group">
             <div class="col-lg-10 col-lg-offset-2">
-                <button type="reset" class="btn btn-default">Reset</button>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary">Bejelentkezés</button>
             </div>
         </div>
     </fieldset>
@@ -36,5 +35,6 @@
   <a href="/login/signup" class="list-group-item">
     Regisztráció
   </a>
+  <a href="/login/google" class="list-group-item">Bejelentkezés Google fiókkal</a>
 </div>
 
