--- a/views/login/signup.hbs
+++ b/views/login/signup.hbs
@@ -21,13 +21,13 @@
         <div class="form-group">
             <label for="surname" class="col-lg-2 control-label">Vezetéknév</label>
             <div class="col-lg-10">
-                <input class="form-control" type="text" id="surname" name="surname">
+                <input class="form-control" type="text" id="familyName" name="familyName">
             </div>
         </div>
         <div class="form-group">
             <label for="forename" class="col-lg-2 control-label">Keresztnév</label>
             <div class="col-lg-10">
-                <input class="form-control" type="text" id="forename" name="forename">
+                <input class="form-control" type="text" id="givenNname" name="givenName">
             </div>
         </div>
         <div class="form-group">
@@ -39,8 +39,8 @@
         
         <div class="form-group">
             <div class="col-lg-10 col-lg-offset-2">
-                <button type="reset" class="btn btn-default">Reset</button>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="reset" class="btn btn-default">Alaphelyzet</button>
+                <button type="submit" class="btn btn-primary">Elküld</button>
             </div>
         </div>
     </fieldset>
